[package]
name = "miku-devserver"
version = "0.1.0"
authors = ["PhiSyX <738010+PhiSyX@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "server/compiler/compiler.rs"
crate-type = ["cdylib"]

[dependencies]
grass = { version = "^0.10.4" }
wasm-bindgen = { version = "^0.2.70", features = ["serde-serialize"] }
wee_alloc = { version = "^0.4.5", optional = true  }
fast-wasm-scraper = { path = "./packages/wasm-scraper" }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release]
lto = true
opt-level = "z"

[features]
default = ["wee_alloc"]
