[package]
name = "miku-devserver"
version = "0.1.0"
edition = "2018"

[workspace]
members = ["config"]

[dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
structopt = "0.3.21"
thiserror = "1.0.25"
tide = "0.16.0"
tide-compress = "0.9.0"
tide-rustls = "0.3.0"
tera = "1.10.0"
miku-devserver-config = { path = "config" }
